--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="shortcut icon" type="image/png" href="client\src\images\i-logo.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.lordicon.com/libs/frhvbuzj/lord-icon-2.0.2.js"></script>
     <title>Ironic Metal Sculptures & Welding</title>
