add somments to the admin panel

--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="bg">
   <head>
     <meta charset="UTF-8" />
     <link rel="shortcut icon" type="image/png" href="client\src\images\i-logo.png"/>
